# pycarot

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  ruff.toml  setup.cfg
.github/workflows/: test.yml
docs/source/: conf.py
pycarot/: __init__.py  datasets.py  distributions.py
pycarot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pycarot/anomaly/: __init__.py  functional.py  oop.py
pycarot/classification/: __init__.py  functional.py  oop.py
pycarot/clustering/: __init__.py  functional.py  oop.py
pycarot/containers/: base_container.py
pycarot/containers/metrics/: anomaly.py  base_metric.py  classification.py  clustering.py  regression.py  time_series.py
pycarot/containers/models/: anomaly.py  base_model.py  classification.py  clustering.py  regression.py  time_series.py
pycarot/internal/: cloudpickle_compat.py  cuml_wrappers.py  distributions.py  logging.py  memory.py  meta_estimators.py  metrics.py  persistence.py  pipeline.py  tunable.py  validation.py
pycarot/internal/display/: __init__.py  display.py  display_backend.py  display_component.py  progress_bar.py
pycarot/internal/parallel/: parallel_backend.py
pycarot/internal/patches/: pyod.py  sklearn.py  yellowbrick.py
pycarot/internal/plots/: helper.py  residual_plots.py  time_series.py  yellowbrick.py
pycarot/internal/plots/utils/: time_series.py
pycarot/internal/preprocess/: iterative_imputer.py  preprocessor.py  transformers.py
pycarot/internal/preprocess/time_series/forecasting/: preprocessor.py
pycarot/internal/pycaret_experiment/: non_ts_supervised_experiment.py  pycaret_experiment.py  supervised_experiment.py  tabular_experiment.py  ts_supervised_experiment.py  unsupervised_experiment.py
pycarot/internal/tests/: __init__.py  stats.py  time_series.py
pycarot/loggers/: __init__.py  base_logger.py  comet_logger.py  dagshub_logger.py  dashboard_logger.py  mlflow_logger.py  wandb_logger.py
pycarot/parallel/: __init__.py  fugue_backend.py
pycarot/regression/: __init__.py  functional.py  oop.py
pycarot/time_series/: __init__.py
pycarot/time_series/forecasting/: functional.py  oop.py
pycarot/utils/: __init__.py  _dependencies.py  _show_versions.py  constants.py  datetime.py  generic.py
pycarot/utils/time_series/: __init__.py  exceptions.py
pycarot/utils/time_series/forecasting/: __init__.py  model_selection.py  models.py  pipeline.py
tests/: conftest.py  test_anomaly.py  test_check_drift.py  test_check_fairness.py  test_classification.py  test_classification_engines.py  test_classification_parallel.py  test_classification_plots.py  test_classification_tuning.py  test_clustering.py  test_clustering_engines.py  test_convert_model.py  test_create_api.py  test_create_app.py  test_create_docker.py  test_datasets.py  test_memory.py  test_models.py  test_multiclass.py  test_optimize_threshold.py  test_overflow.py  test_persistence.py  test_persistence_experiment.py  test_pipeline.py  test_preprocess.py  test_probability_threshold.py  test_regression.py  test_regression_engines.py  test_regression_parallel.py  test_regression_plots.py  test_regression_tuning.py  test_supervised_predict_model.py  test_time_series_base.py  test_time_series_blending.py  test_time_series_engines.py  test_time_series_exogenous.py  test_time_series_feat_eng.py  test_time_series_indices.py  test_time_series_metrics.py  test_time_series_mlflow.py  (+17 more)
tests/benchmarks/: test_memory_performance.py  test_time_series_sp_detection.py
tutorials/: README.md  Tutorial - Anomaly Detection.ipynb  Tutorial - Binary Classification.ipynb  Tutorial - Multiclass Classification.ipynb  Tutorial - Regression.ipynb
tutorials/time_series/forecasting/: univariate_with_exogeneous_part1.ipynb  univariate_with_exogeneous_part2.ipynb  univariate_with_exogeneous_part3.ipynb  univariate_without_exogeneous_part1.ipynb  univariate_without_exogeneous_part2.ipynb  univariate_without_exogeneous_part3.ipynb
tutorials/translations/chinese/: Anomaly Detection Tutorial Level Beginner (中文) - ANO101.ipynb  Binary Classification Tutorial Level Beginner (中文) -  CLF101.ipynb
tutorials/translations/greek/: Binary Classification Tutorial Level Beginner -  CLF101.ipynb
tutorials/translations/japanese/: JA-Regression Tutorial Level Beginner - REG101.ipynb  JA-Regression Tutorial Level Intermediate - REG102.ipynb  JA_Binary_Classification_Tutorial_Level_Beginner.ipynb
tutorials/translations/portuguese/: Tutorial de classificacao binaria (CLF101) - Nivel iniciante.ipynb
