[project]
name = "pycarot"
version = "3.4.0"
description = "PyCaret - An open source, low-code machine learning library in Python."
readme = "README.md"
keywords = [
  "data-mining",
  "data-science",
  "classification",
  "clustering",
  "detection",
  "forecasting",
  "machine-learning",
  "regression",
  "scikit-learn<1.5",
  "time-series",
]
license = { file = "LICENSE" }
maintainers = [
  { name = "pycaret developers" },
]
# for full credits see contributors.md
authors = [
    { name = "pycaret developers" },
]
requires-python = ">=3.11,<3.15"
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development",
]
# core dependencies of pycaret
# this set should be kept minimal!
dependencies = [
  # Base
  "ipython>=8.20",
  "ipywidgets>=8.1.0",
  "tqdm>=4.66.0",
  "numpy>=1.26,<2.2",
  "pandas>=2.1,<2.5",
  "jinja2>=3.1",
  "scipy>=1.12,<1.15",
  "joblib>=1.3,<1.7",
  "scikit-learn>=1.4,<1.8",
  "pyod>=1.1.3",
  "imbalanced-learn>=0.13.0,<0.15.0",
  "category-encoders>=2.6.0",
  "lightgbm>=4.3.0",
  "numba>=0.59.0",
  "requests>=2.31.0",
  "psutil>=5.9.0",
  "markupsafe>=2.1.0",
  "importlib_metadata>=6.0.0; python_version<'3.12'",
  "nbformat>=5.9.0",
  "cloudpickle>=2.2.0",
  "deprecation>=2.1.0",
  "xxhash>=3.0.0",
  "wurlitzer>=3.0; platform_system != 'Windows'",
  "setuptools>=69.0",
  # Plotting
  "matplotlib>=3.9,<3.12",
  "mljar-scikit-plot>=0.3.7",
  "yellowbrick>=1.5",
  "plotly>=5.18.0",
  "kaleido>=0.2.1",
  "schemdraw>=0.18",
  "plotly-resampler>=0.10.0",
  # Time-series
  "statsmodels>=0.14.0",
  "sktime>=0.31.0,<0.33",
  "tbats>=1.1.3",
  "pmdarima>=2.0.4",
]

[project.optional-dependencies]
# there are the following dependency sets:
# - full - all soft dependencies
# - analysis
# - models
# - tuners
# - mlops
# - parallel
# - dev
# - test

# soft dependencies are not required for the core functionality of pycaret

# all soft dependencies
#
# users can install via "pip install pycaret[full]"
#
full = [
  "shap>=0.45.0",
  "interpret>=0.6.0",
  "umap-learn>=0.5.5",
  "pyyaml>=6.0",
  "ydata-profiling>=4.6.0",
  "explainerdashboard>=0.4.0",
  "fairlearn>=0.10.0",
  "xgboost>=2.1.0",
  "catboost>=1.2.5",
  "kmodes>=0.12.0",
  "mlxtend>=0.23.0",
  "statsforecast>=1.7,<1.9",
  "scikit-learn-intelex>=2024.5; platform_machine == 'x86_64' or platform_machine == 'AMD64'",
  "tune-sklearn>=0.5.0",
  "ray[tune]>=2.9.0",
  "hyperopt>=0.2.7",
  "optuna>=3.5.0",
  "optuna-integration>=3.5.0",
  "scikit-optimize>=0.9.0",
  "mlflow>=2.10.0",
  "gradio>=4.0.0",
  "boto3>=1.34.0",
  "fastapi>=0.109.0",
  "uvicorn>=0.27.0",
  "m2cgen>=0.10.0",
  "evidently>=0.4.35",
  "dask>=2024.1",
  "distributed>=2024.1",
  "fugue>=0.9.1",
  "flask>=3.0.0",
  "Werkzeug>=3.0.0",
  "pytest>=8.0.0",
  "moto>=5.0.0",
  "fugue[dask]",
  "dash[testing]",
  "black>=24.8.0",
  "isort>=5.13.2",
  "ruff>=0.8.0",
  "setuptools>=75.0.0",
  "mypy>=1.11.0",
]

analysis = [
  "shap>=0.45.0",
  "interpret>=0.6.0",
  "umap-learn>=0.5.5",
  "pyyaml>=6.0",
  "ydata-profiling>=4.6.0",
  "explainerdashboard>=0.4.0",
  "fairlearn>=0.10.0",
]

models = [
  "xgboost>=2.1.0",
  "catboost>=1.2.5",
  "kmodes>=0.12.0",
  "mlxtend>=0.23.0",
  "statsforecast>=1.7,<1.9",
  "scikit-learn-intelex>=2024.5; platform_machine == 'x86_64' or platform_machine == 'AMD64'",
]

tuners = [
  "tune-sklearn>=0.5.0",
  "ray[tune]>=2.9.0",
  "hyperopt>=0.2.7",
  "optuna>=3.5.0",
  "optuna-integration>=3.5.0",
  "scikit-optimize>=0.9.0",
]

mlops = [
  "mlflow>=2.10.0",
  "gradio>=4.0.0",
  "boto3>=1.34.0",
  "fastapi>=0.109.0",
  "uvicorn>=0.27.0",
  "m2cgen>=0.10.0",
  "evidently>=0.4.35",
]

parallel = [
  "dask>=2024.1",
  "distributed>=2024.1",
  "fugue>=0.9.1",
  "flask>=3.0.0",
  "Werkzeug>=3.0.0",
]

prophet = [
  "prophet>=1.0.1",
]

# dev - the developer dependency set, for contributors
dev = [
  "black>=24.8.0",
  "isort>=5.13.2",
  "ruff>=0.8.0",
  "flake8>=7.1.1",
  "setuptools>=75.0.0",
  "mypy>=1.11.0",
]


# CI related soft dependency sets - not for users of pycaret
# they are stable and subject to deprecation policies
test = [
  "pytest>=8.0.0",
  "moto>=5.0.0",
  "fugue[dask]",
  "dash[testing]",
]


[project.urls]
"API Reference" = "https://pycaret.gitbook.io/"
Documentation = "https://pycaret.gitbook.io/"
Download = "https://pypi.org/project/pycaret/#files"
Homepage = "https://pycaret.org/"
"Release Notes" = "https://github.com/pycaret/pycaret/releases"
Repository = "https://github.com/pycaret/pycaret"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>61",
]

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[dependency-groups]
# Enable uv workflows: install grouped extras and dev/test deps
dev = ["pycarot[dev]"]
test = [
    "pycarot[test]",
    "pytest-cov>=7.0.0",
]
full = ["pycarot[full]"]
